# fabiangram

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
fabiangram/: asgi.py  settings.py  urls.py  views.py  wsgi.py
posts/: models.py  views.py
posts/migrations/: 0001_initial.py  0002_user_is_admin.py  0003_user_country.py
posts/templates/: feed.html
tests/: test_fabiangram.py
users/: admin.py  apps.py  models.py
users/migrations/: 0001_initial.py  0002_profile_picture.py
