[tool.poetry]
name = "fabiangram"
version = "0.1.0"
description = ""
authors = ["Fabián Ardila <fardila@bancodebogota.com.co>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
